--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "gatsby": "^2.15.18",
+    "gatsby-source-prismic": "^2.3.0-alpha.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "prettier": "^1.18.2"
   },
   "repository": {
